added meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,47 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+
+    <!-- Primary Meta Tags -->
+    <title>Hacker News Search App | Akshay Webster</title>
+    <meta name="title" content="Hacker News Search App | Akshay Webster" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A Hacker News Search app with server-side pagination, using the HN Search API by Algolia - Built by Akshay Webster"
     />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta
+      property="og:title"
+      content="Hacker News Search App | Akshay Webster"
+    />
+    <meta
+      property="og:description"
+      content="A Hacker News Search app with server-side pagination, using the HN Search API by Algolia - Built by Akshay Webster"
+    />
+    <meta
+      property="og:image"
+      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta
+      property="twitter:title"
+      content="Hacker News Search App | Akshay Webster"
+    />
+    <meta
+      property="twitter:description"
+      content="A Hacker News Search app with server-side pagination, using the HN Search API by Algolia - Built by Akshay Webster"
+    />
+    <meta
+      property="twitter:image"
+      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+    />
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,6 +61,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+
     <title>HN Search</title>
   </head>
   <body>
