fixed meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -14,37 +14,53 @@
       content="A Hacker News Search app with server-side pagination, using the HN Search API by Algolia - Built by Akshay Webster"
     />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://metatags.io/" />
+    <!-- social meta tags -->
+    <!-- COMMON TAGS -->
+    <meta charset="utf-8" />
+    <title>Hacker News Search App | Akshay Webster</title>
+    <!-- Search Engine -->
     <meta
-      property="og:title"
-      content="Hacker News Search App | Akshay Webster"
-    />
-    <meta
-      property="og:description"
+      name="description"
       content="A Hacker News Search app with server-side pagination, using the HN Search API by Algolia - Built by Akshay Webster"
     />
+    <meta name="image" content="https://i.ibb.co/YQ6pC5h/screenshot.png" />
+    <!-- Schema.org for Google -->
+    <meta itemprop="name" content="Hacker News Search App | Akshay Webster" />
     <meta
-      property="og:image"
-      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+      itemprop="description"
+      content="A Hacker News Search app with server-side pagination, using the HN Search API by Algolia - Built by Akshay Webster"
     />
-
+    <meta itemprop="image" content="https://i.ibb.co/YQ6pC5h/screenshot.png" />
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta name="twitter:card" content="summary" />
     <meta
-      property="twitter:title"
+      name="twitter:title"
       content="Hacker News Search App | Akshay Webster"
     />
     <meta
-      property="twitter:description"
+      name="twitter:description"
       content="A Hacker News Search app with server-side pagination, using the HN Search API by Algolia - Built by Akshay Webster"
     />
+    <meta name="twitter:site" content="@akshaywebster" />
+    <meta name="twitter:creator" content="@akshaywebster" />
     <meta
-      property="twitter:image"
-      content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
+      name="twitter:image:src"
+      content="https://i.ibb.co/YQ6pC5h/screenshot.png"
     />
+    <!-- Open Graph general (Facebook, Pinterest & Google+) -->
+    <meta name="og:title" content="Hacker News Search App | Akshay Webster" />
+    <meta
+      name="og:description"
+      content="A Hacker News Search app with server-side pagination, using the HN Search API by Algolia - Built by Akshay Webster"
+    />
+    <meta name="og:image" content="https://i.ibb.co/YQ6pC5h/screenshot.png" />
+    <meta name="og:url" content="https://hn-search.akshaywebster.com" />
+    <meta
+      name="og:site_name"
+      content="Hacker News Search App | Akshay Webster"
+    />
+    <meta name="og:type" content="website" />
+    <!-- end of social meta tags-->
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
